fix: white background in light mode, dark gray in dark mode

--- a/src/styles/Photos.css
+++ b/src/styles/Photos.css
@@ -1,5 +1,5 @@
 #photos-page {
-  background-color: rgb(55, 55, 55);
+  background-color: #ffffff;
   height: 100%;
   min-height: 100vh;
   width: 100%;
